--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,4 +34,12 @@
 
 {{ template "_internal/twitter_cards.html" . }}
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-1816823661347944",
+          enable_page_level_ads: true
+     });
+</script>
+
 
