--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,13 +1,14 @@
-
-
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-{{ with .Title }} <title>{{ . }} {{if $.IsHome}}- {{ $.Site.Params.slogan | safeHTML }}{{ end }}</title>
+{{ partial "schema" . }}
+
+{{ with .Title }} <title>{{ . }} {{if $.IsHome}}- {{ $.Site.Params.slogan | default "" | safeHTML }}{{ end }}</title>
 {{ end }}
 
-{{ with .Site.Params.description }}
-<meta name="description" content="{{ . }}">
+{{ if .Description }}<meta name="description" content="{{ .Description }}" />
+{{ else }}<meta name="description" content="{{ .Site.Params.description }}" />
 {{ end }}
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -21,10 +22,9 @@
 <link rel="shortcut icon" href="{{ "img/favicon.ico" | absURL }}" type="image/x-icon">
 <link rel="icon" href="{{ "img/favicon.ico" | absURL }}" type="image/x-icon">
 {{ if .RSSLink }}
-<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
+<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title | default "" }}" />
+<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title | default "" }}" />
 {{ end }}
-
 {{ template "_internal/google_analytics_async.html" . }}
 {{ template "_internal/opengraph.html" . }}
 
