--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,7 +36,7 @@
 {{ template "_internal/twitter_cards.html" . }}
 
 <!-- Matomo -->
-<script async type="text/javascript">
+<script type="text/javascript">
   var _paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(['trackPageView']);
