--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -35,6 +35,14 @@
 
 {{ template "_internal/twitter_cards.html" . }}
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-3682318935445065",
+          enable_page_level_ads: true
+     });
+</script>
+
 <!-- Matomo -->
 <script type="text/javascript">
   var _paq = window._paq || [];
@@ -49,13 +57,5 @@
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
+<noscript><p><img src="https://monitor.hackerheaven.org/matomo/matomo.php?idsite=2&amp;rec=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Matomo Code -->
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-3682318935445065",
-          enable_page_level_ads: true
-     });
-</script>
-
